--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ONCE-LIZZY</title>
+    <title>LZW'space</title>
     <style>  
       body {
         margin: 0;
@@ -16,7 +16,7 @@
       text-align: center;
       padding: 20px;
     ">
-      <img src='https://www.helloimg.com/i/2024/12/08/6755867484bb0.png' alt='大笨狗' width="280px" height="140px">
+      <img src='https://www.helloimg.com/i/2024/12/08/675594e9bf5e3.jpg' alt='LZW' width="180px" height="150px">
     </div>
     <div style="
        max-width: 700px;
@@ -28,16 +28,16 @@
        color: #cb1d2a
        
     ">
-      <p>[TEAM_TWICE]</p>
-      <p>NAYEON</p>
-      <p>JEONGYEON</p>
-      <p>MOMO</p>
-      <p>SANA</p>
-      <p>JIHYO</p>
-      <p>MINA</p>
-      <p>DAHYUN</p>
-      <p>CHAEYEONG</p>
-      <p>TZUYU</p>
+      <p>[LiizW'SPACE]</p>
+      <p>学习</p>
+      <p>摄影</p>
+      <p>音乐</p>
+      <p>追星</p>
+      <p>思考</p>
+      <p>朋友</p>
+      <p>旅游</p>
+      <p>电影</p>
+      <p>搞笑</p>
     </div>
     <div style="
       background-color: #acf3f3;
@@ -45,8 +45,8 @@
       padding: 20px;
       font-size: 18px;
     ">
-      <p>ONCE-LIZZY的网站</p>
-      <a href="https://space.bilibili.com/495038204/dynamic?spm_id_from=333.1007.0.0">友情链接—傻柴字幕组</a>
+      <p>LiizW的网站</p>
+      <a href="https://www.bilibili.com/">友情链接—boliboli</a>
     </div>
   </body>
 </html>
